--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.11",
+    "babel-plugin-module-resolver": "^5.0.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
